Heri & Sophie |#2917| Alignment issue on dashboard

--- a/datawinners/media/css/scss/section_dashboard.scss
+++ b/datawinners/media/css/scss/section_dashboard.scss
@@ -109,7 +109,7 @@ p{
 }
 
 table.no-border{
-    width: 230px;
+    width: 243px;
     line-height: 5px;
     &.line_height_14{
         line-height:14px;
